--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,1 +1,4 @@
-link.guitar: Mes guitares
+link.guitar: mes guitares
+link.song_book: my songbook
+link.login: se connecter
+link.register: s'inscrire
