--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,4 +1,4 @@
-link.guitar: mes guitares
+link.instrument: mes instruments
 link.song_book: my songbook
 link.theory: théorie
 link.login: se connecter
