--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -1,5 +1,6 @@
 link.instrument: my instruments
 link.song_book: my songbook
 link.theory: theory
+link.musician: musicians
 link.login: login
 link.register: register
