--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,5 +1,6 @@
 link.instrument: mes instruments
 link.song_book: my songbook
 link.theory: théorie
+link.musician: musiciens
 link.login: se connecter
 link.register: s'inscrire
